k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
        - name: java-app
          image: stoop1dk4/java_app:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: apps
spec:
  type: NodePort
  selector:
    app: java-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30081
